--- a/demo_config.json
+++ b/demo_config.json
@@ -2,7 +2,7 @@
   "API_KEY": "b80a447d-ef2c-4d44-978a-8309be7026de",
   "ASSET": "AUD",
   "VOLUME": "0.1",
-  "ASSET_PAIR": "AUDUSD",
+  "ASSET_PAIR": "BTCUSD",
   "TRADING_FREQUENCY": 0.2,
   "PATH_TO_DATABASE": "./database/tradebot.db",
   "MOMENTUM_ACCUMULATOR": 50
